objects/ASI_Forecast_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Total__c</fullName>
        <formula>ASI_Forecast_P1__c + ASI_Forecast_P2__c + ASI_Forecast_P3__c + ASI_Forecast_P4__c + ASI_Forecast_P5__c + ASI_Forecast_P6__c + ASI_Forecast_P7__c + ASI_Forecast_P8__c + ASI_Forecast_P9__c + ASI_Forecast_P10__c + ASI_Forecast_P11__c + ASI_Forecast_P12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Channel__c</fullName>
        <formula>ASI_Forecast__r.ASI_Forecast_Channel__r.ASI_CRM_CN_Channel_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Item_Pack__c</fullName>
        <formula>VALUE (ASI_Forecast_Item_Group__r.ASI_CRM_CN_pack__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Pack</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Item_Size__c</fullName>
        <formula>ASI_Forecast_Item_Group__r.ASI_CRM_Size_ml__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Market__c</fullName>
        <label>Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_P10_Actual__c</fullName>
        <formula>CEILING((ASI_Forecast_P10__c * 9) / (ASI_Forecast_Item_Group__r.ASI_CRM_Size_ml__c/1000 * VALUE (ASI_Forecast_Item_Group__r.ASI_CRM_CN_pack__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P10 Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_P10__c</fullName>
        <label>P10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_P11_Actual__c</fullName>
        <formula>CEILING((ASI_Forecast_P11__c * 9) / (ASI_Forecast_Item_Group__r.ASI_CRM_Size_ml__c/1000 * VALUE (ASI_Forecast_Item_Group__r.ASI_CRM_CN_pack__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P11 Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_P11__c</fullName>
        <label>P11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_P12_Actual__c</fullName>
        <formula>CEILING((ASI_Forecast_P12__c * 9) / (ASI_Forecast_Item_Group__r.ASI_CRM_Size_ml__c/1000 * VALUE (ASI_Forecast_Item_Group__r.ASI_CRM_CN_pack__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P12 Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_P12__c</fullName>
        <label>P12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Period_Date__c</fullName>
        <formula>ASI_Forecast__r.ASI_Forecast_Period_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Period__c</fullName>
        <formula>ASI_Forecast__r.ASI_Forecast_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Ref_Budget_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Budget Item</label>
        <referenceTo>ASI_Forecast_Item__c</referenceTo>
        <relationshipLabel>Forecast Items (Reference Budget Item)</relationshipLabel>
        <relationshipName>Forecast_Budget_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Ref_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Forecast Item</label>
        <referenceTo>ASI_Forecast_Item__c</referenceTo>
        <relationshipLabel>Forecast Items</relationshipLabel>
        <relationshipName>Forecast_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Sub_Brand__c</fullName>
        <formula>ASI_Forecast_Item_Group__r.ASI_MFM_Sub_brand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Total_Actual__c</fullName>
        <formula>(ASI_Forecast_P1_Actual__c + ASI_Forecast_P2_Actual__c + ASI_Forecast_P3_Actual__c + ASI_Forecast_P4_Actual__c + ASI_Forecast_P5_Actual__c + ASI_Forecast_P6_Actual__c + ASI_Forecast_P7_Actual__c + ASI_Forecast_P8_Actual__c + ASI_Forecast_P9_Actual__c + ASI_Forecast_P10_Actual__c + ASI_Forecast_P11_Actual__c + ASI_Forecast_P12_Actual__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast__c</fullName>
        <label>Forecast</label>
        <referenceTo>ASI_Forecast__c</referenceTo>
        <relationshipLabel>Forecast Items</relationshipLabel>
        <relationshipName>ASI_Forecast_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Forecast Item</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>Forecast Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_Forecast_TW_Item</fullName>
        <active>true</active>
        <label>TW Forecast Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>